# HUDict

./: .gitignore  README.md  README.zh-CN.md  config.ini  pyproject.toml  run-hudict.bat
scripts/: build_release.ps1  publish_release.ps1
src/hudict/: app.py  config.py  debug.py  dictionary.py  hit_test.py  models.py  ocr.py  paths.py  popup.py  screen.py  worker.py
src/hudict/tools/: build_ecdict.py
